--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <span>PHARRELLWILLIAMS.COM</span>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-        <img src="">
+        <img src="columbia-logo.png">
         <!-- span text 'COLUMBIARECORDS.COM' -->
-
+        <span></span>
         <br>
         
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
